XMLExper/m12/m12_428_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘const tinyxml2::XMLElement* tinyxml2::XMLNode::ToElementWithName(const char*) const’:
tinyxml2.cpp:1233:57: error: cannot dynamic_cast ‘element’ (of type ‘const class tinyxml2::XMLElement*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 1233 |     if ( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(element) == 0 ) {
      |                                                         ^
diff: tinyxml2.o: No such file or directory
